[gd_scene load_steps=19 format=3 uid="uid://cyvd1gymux02q"]

[ext_resource type="Script" uid="uid://mssknw6bcn05" path="res://skriptit/perhonen_ampuja.gd" id="1_swbjk"]
[ext_resource type="Texture2D" uid="uid://bshv5yglnr7ru" path="res://grafiikka/Valo128.png" id="2_fyinl"]
[ext_resource type="Texture2D" uid="uid://cx2e2qryxy05i" path="res://grafiikka/PerhonenLento.PNG" id="3_koebx"]
[ext_resource type="AudioStream" uid="uid://b4jldo0r6uty7" path="res://audio/perhonen/perhonen1.mp3" id="4_qhorh"]
[ext_resource type="AudioStream" uid="uid://2efjkipj8go2" path="res://audio/perhonen/perhonen2.mp3" id="5_q8cwp"]
[ext_resource type="AudioStream" uid="uid://bmqnkcv74u5o8" path="res://audio/perhonen/perhonen3.mp3" id="6_tcgur"]
[ext_resource type="AudioStream" uid="uid://byg8n78h5nxs3" path="res://audio/perhonen/perhonen4.mp3" id="7_7fd03"]
[ext_resource type="PackedScene" uid="uid://cpbhfckag1qrt" path="res://scenet/polunetsija.tscn" id="8_fyinl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8nepe"]
atlas = ExtResource("3_koebx")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg7v4"]
atlas = ExtResource("3_koebx")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y36mp"]
atlas = ExtResource("3_koebx")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6athy"]
atlas = ExtResource("3_koebx")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppeqm"]
atlas = ExtResource("3_koebx")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_21mb1"]
atlas = ExtResource("3_koebx")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhk86"]
atlas = ExtResource("3_koebx")
region = Rect2(384, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_nepos"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nepe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg7v4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y36mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6athy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppeqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21mb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhk86")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_2q18j"]
radius = 217.037

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_7x1qg"]
random_volume_offset_db = 1.0
streams_count = 4
stream_0/stream = ExtResource("4_qhorh")
stream_1/stream = ExtResource("5_q8cwp")
stream_2/stream = ExtResource("6_tcgur")
stream_3/stream = ExtResource("7_7fd03")

[node name="PerhonenAmpuja" type="Area2D" groups=["valonlahde"]]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_swbjk")

[node name="PointLight2D" type="PointLight2D" parent="."]
blend_mode = 2
range_item_cull_mask = 3
shadow_enabled = true
texture = ExtResource("2_fyinl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_nepos")
frame_progress = 0.153834

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2q18j")

[node name="AudioPerhonen" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_7x1qg")
volume_db = -2.0
max_distance = 500.0
bus = &"Kaiku"

[node name="Polunetsija" parent="." instance=ExtResource("8_fyinl")]

[node name="KohteenAsetusTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="KohteenAsetusTimer" to="." method="_on_kohteen_asetus_timer_timeout"]
